*Empty MediaWiki Message*

--- a/Bakambi-ekólo_ba_Kongó-Kinsásá.mw
+++ b/Bakambi-ekólo_ba_Kongó-Kinsásá.mw
@@ -5,35 +5,61 @@
 
 Makomi oyo elandi elakisi liste ya '''bakambi ekolo''' oyo balandanaki o ekolo oyo eyebánákí kala na nkombo ya "Congo Belge", wuta lipanda elongamaki na [[Belgique|Ekolo Belgiki]] na mokolo [[1 juin|30 Juin]] [[1960]]. Bankombo nionso oyo Ekolo Kongo ezwaki banda lipanda, makomami mpe awa.
 
-{|border="2" cellpadding="2" cellspacing="2"
-!Nkombo
-!Ebandeli-kimokonzi
-!Suka-kimokonzi
-!Parti
-!Elembo
-|-
-| colspan="5" bgcolor=#5599cc | <center> [[Kongo-Kinshasa|Kongo]] </center>
-|-
-| [[Joseph Kasavubu]] || [[1 juillet|premier juillet]] [[1960]] || [[24 novembre]] [[1965]] ||  || renversé militairement par Mobutu
-|-
-| [[Mobutu Sese Seko|Joseph-Désiré Mobutu]] ||  [[25 novembre]] [[1965]] || [[1 juillet|premier juillet]] [[1966]] ||  ||
-|-
-|colspan="5" bgcolor=#5599cc | <center> [[Kongo-Kinshasa|Kongo Demokratiki]] </center>
-|-
-| [[Mobutu Sese Seko|Joseph-Désiré Mobutu]] || [[1 juillet|premier juillet]] [[1966]] || [[27 octobre]] [[1971]] ||  || 
-|-
-|colspan="5" bgcolor=#5599cc  | <center> [[Kongo-Kinshasa|Zaïre]] </center>
-|-
-| [[Mobutu Sese Seko]] || [[27 octobre]] [[1971]] || [[16 mai]] [[1997]] ||  || renversé alors qu'il était à l'étranger
-|-
-|colspan="5" bgcolor=#5599cc | <center> [[Kongo-Kinshasa|Kongo Demokratiki]] </center>
-|-
-| [[Laurent-Désiré Kabila]] || [[17 mai]] [[1997]] || [[29 mai]] [[1997]] || || à titre intérimaire
-|-
-| [[Laurent-Désiré Kabila]] || [[29 mai]] [[1997]] || [[16 janvier]] [[2001]] || || assassiné
-|-
-| [[Joseph Kabila]] || [[17 janvier]] [[2001]] || [[26 janvier]] [[2001]] || || fils du précédent, président par intérim
-|-
-| [[Joseph Kabila]] || [[26 janvier]] [[2001]] || <center>-</center> ||  || encadré par 4 vice-présidents des factions de la [[Seconde Guerre du Kivu]].
-|-
+{| border=1 style="border-collapse: collapse"
+|- align=left
+! width="25%"|Kimokonzi
+! width="20%"|Nkombo
+! width="10%"|[[#Baparti:-|Parti]]
+! width="20%"|Elembo
+|- valign=top
+|'''[[Kɔ́ngɔ-Kinshasa|Repubiliki ya Kɔ́ngɔ]]'''||colspan="3"|''Independence from [[Belgium]]''
+|- valign=top bgcolor="#ffffec"
+|<small>[[1 July]] [[1960]] to [[1 August]] [[1964]]||'''[[Joseph Kasavubu]]''', <small>Head of State||<small>ABAKO||&nbsp;
+|- valign=top bgcolor="#ffffec"
+|<small>[[1 August]] [[1964]] to [[25 November]] [[1965]]||'''[[Joseph Kasavubu]]''', <small>President||<small>ABAKO||&nbsp;
+|- valign=top bgcolor="#ffffec"
+|<small>[[31 March]] [[1961]] to [[5 August]] [[1961]]||'''[[Antoine Gizenga]]''', <small>Head of State||<small>MNC-L||<small>In rebellion, at Stanleyville
+|- valign=top bgcolor="#ffffec"
+|<small>[[25 November]] [[1965]] to ''[[1 July]] [[1966]]''||[[Joseph Mobutu|'''Joseph'''-Désiré '''Mobutu''']], <small>President||<small>Mil||&nbsp; 
+|- valign=top
+|colspan="4"|'''[[Kɔ́ngɔ-Kinshasa|Repubiliki ya Kɔ́ngɔ Demokratiki]]''' 
+|- valign=top bgcolor="#ffffec"
+|<small>''[[1 July]] [[1966]]'' to ''[[1967]]''||rowspan="2"|[[Joseph Mobutu|'''Joseph'''-Désiré '''Mobutu''']], <small>President||<small>Mil||<small>''(contd.)''
+|- valign=top bgcolor="#ffffec"
+|<small>''[[1967]]'' to ''[[27 October]] [[1971]]''||<small>MRP||&nbsp;
+|- valign=top
+|colspan="4"|'''[[Zaire|Repubiliki ya Zaire]]'''
+|- valign=top bgcolor="#ffffec"
+|<small>[[27 October]] [[1971]] to ''[[10 January]] [[1972]]''||[[Joseph Mobutu|'''Joseph'''-Désiré '''Mobutu''']], <small>President||rowspan="2"|<small>MRP||<small>Changed name to [[Joseph Mobutu|Mobutu Sese Seko]]
+|- valign=top bgcolor="#ffffec"
+|<small>''[[10 January]] [[1972]]'' to [[16 May]] [[1997]]||'''[[Joseph Mobutu|Mobutu Sese Seko]]''', <small>President
+||<small>''(contd.)''; Hitherto named [[Joseph Mobutu|'''Joseph'''-Désiré '''Mobutu''']]
+|- valign=top
+|colspan="4"|'''[[Repubiliki ya Kɔ́ngɔ Demokratiki]]''' 
+|- valign=top bgcolor="#ffffec"
+|<small>[[17 May]] [[1997]] to ''[[29 May]] [[1997]]''||'''[[Laurent-Désiré Kabila]]''', <small>Head of State||rowspan="2"|<small>AFDL||&nbsp;
+|- valign=top bgcolor="#ffffec"
+|<small>''[[29 May]] [[1997]]'' to [[16 January]] [[2001]]||'''[[Laurent-Désiré Kabila]]''', <small>President||&nbsp;
+|- valign=top bgcolor="#ffffec"
+|<small>[[17 January]] [[2001]] to ''[[26 January]] [[2001]]''||'''[[Joseph Kabila]]''', <small>interim President||rowspan="3"|<small> AFDL||&nbsp;
+|- valign=top bgcolor="#ffffec"
+|<small>''[[26 January]] [[2001]]'' to ''[[8 April]] [[2003]]''||'''[[Joseph Kabila]]''', <small>President||&nbsp;
+|- valign=top bgcolor="#ffffec"
+|<small>''[[8 April]] [[2003]]'' to present||'''[[Joseph Kabila]]''', <small>interim President||&nbsp;
 |}
+
+=== Baparti:- ===
+
+{{Baparti o Kɔ́ngɔ-Kinshasa}}
+
+
+=== See also:- ===
+*[[Kongo]]
+**[[Bakambi bulamatari of the Kɔ́ngɔ-Kinshasa]]
+**[[Bakambi ekolo o ntangu ya Ekolo ya bonsomi ya Kɔ́ngɔ]] 
+**[[Bakambi ekolo o ntangu ya Congo Belge]] 
+*[[Zaire]]
+
+[[Category:Politics bya Kɔ́ngɔ-Kinshasa]]
+[[fr:Présidents de la République démocratique du Congo]]
+[[en:Heads of State of the Democratic Republic of the Congo]]
