*Empty MediaWiki Message*

--- a/Bakambi-ekólo_ba_Kongó-Kinsásá.mw
+++ b/Bakambi-ekólo_ba_Kongó-Kinsásá.mw
@@ -12,7 +12,7 @@ Makomi oyo elandi elakisi liste ya '''bakambi ekolo''' oyo balandanaki o ekolo o
 ! width="10%"|[[#Baparti:-|Parti]]
 ! width="20%"|Elembo
 |- valign=top
-|'''[[Kɔ́ngɔ-Kinshasa|Repubiliki ya Kɔ́ngɔ]]'''||colspan="3"|''Independence from [[Belgium]]''
+|'''[[Kɔ́ngɔ-Kinshasa|Repubiliki ya Kɔ́ngɔ (Kinshasa)]]'''||colspan="3"|''Independence from [[Belgium]]''
 |- valign=top bgcolor="#ffffec"
 |<small>[[1 July]] [[1960]] to [[1 August]] [[1964]]||'''[[Joseph Kasavubu]]''', <small>Head of State||<small>ABAKO||&nbsp;
 |- valign=top bgcolor="#ffffec"
