*Empty MediaWiki Message*

--- a/Bakambi-ekólo_ba_Kongó-Kinsásá.mw
+++ b/Bakambi-ekólo_ba_Kongó-Kinsásá.mw
@@ -14,38 +14,36 @@ Makomi oyo elandi elakisi liste ya '''bakambi ekolo''' oyo balandanaki o ekolo o
 |- valign=top
 |'''[[Kɔ́ngɔ-Kinshasa|Repubiliki ya Kɔ́ngɔ (Kinshasa)]]'''||colspan="3"|''Independence from [[Belgium]]''
 |- valign=top bgcolor="#ffffec"
-|<small>[[1 July]] [[1960]] to [[1 August]] [[1964]]||'''[[Joseph Kasavubu]]''', <small>Head of State||<small>ABAKO||&nbsp;
+|<small>[[1 July]] [[1960]] to [[1 August]] [[1964]]||'''[[Joseph Kasavubu]]''', <small>Mokambi leta||<small>ABAKO||&nbsp;
 |- valign=top bgcolor="#ffffec"
-|<small>[[1 August]] [[1964]] to [[25 November]] [[1965]]||'''[[Joseph Kasavubu]]''', <small>President||<small>ABAKO||&nbsp;
+|<small>[[1 August]] [[1964]] to [[25 November]] [[1965]]||'''[[Joseph Kasavubu]]''', <small>Mokambi ekolo||<small>ABAKO||&nbsp;
 |- valign=top bgcolor="#ffffec"
-|<small>[[31 March]] [[1961]] to [[5 August]] [[1961]]||'''[[Antoine Gizenga]]''', <small>Head of State||<small>MNC-L||<small>In rebellion, at Stanleyville
+|<small>[[31 March]] [[1961]] to [[5 August]] [[1961]]||'''[[Antoine Gizenga]]''', <small>Mokambi leta||<small>MNC-L||<small>In rebellion, at Stanleyville
 |- valign=top bgcolor="#ffffec"
-|<small>[[25 November]] [[1965]] to ''[[1 July]] [[1966]]''||[[Joseph Mobutu|'''Joseph'''-Désiré '''Mobutu''']], <small>President||<small>Mil||&nbsp; 
+|<small>[[25 November]] [[1965]] to ''[[1 July]] [[1966]]''||[[Joseph Mobutu|'''Joseph'''-Désiré '''Mobutu''']], <small>Mokambi ekolo||<small>Mil||&nbsp; 
 |- valign=top
 |colspan="4"|'''[[Kɔ́ngɔ-Kinshasa|Repubiliki ya Kɔ́ngɔ Demokratiki]]''' 
 |- valign=top bgcolor="#ffffec"
-|<small>''[[1 July]] [[1966]]'' to ''[[1967]]''||rowspan="2"|[[Joseph Mobutu|'''Joseph'''-Désiré '''Mobutu''']], <small>President||<small>Mil||<small>''(contd.)''
+|<small>''[[1 July]] [[1966]]'' to ''[[1967]]''||rowspan="2"|[[Joseph Mobutu|'''Joseph'''-Désiré '''Mobutu''']], <small>Mokambi ekolo||<small>Mil||<small>''(contd.)''
 |- valign=top bgcolor="#ffffec"
-|<small>''[[1967]]'' to ''[[27 October]] [[1971]]''||<small>MRP||&nbsp;
+|<small>''[[1967]]'' to ''[[27 October]] [[1971]]''||<small>MPR||&nbsp;
 |- valign=top
 |colspan="4"|'''[[Zaire|Repubiliki ya Zaire]]'''
 |- valign=top bgcolor="#ffffec"
-|<small>[[27 October]] [[1971]] to ''[[10 January]] [[1972]]''||[[Joseph Mobutu|'''Joseph'''-Désiré '''Mobutu''']], <small>President||rowspan="2"|<small>MRP||<small>Changed name to [[Joseph Mobutu|Mobutu Sese Seko]]
+|<small>[[27 October]] [[1971]] to ''[[10 January]] [[1972]]''||[[Joseph Mobutu|'''Joseph'''-Désiré '''Mobutu''']], <small>Mokambi ekolo||rowspan="2"|<small>MPR||<small>Abalusi nkombo naye na [[Joseph Mobutu|Mobutu Sese Seko]]
 |- valign=top bgcolor="#ffffec"
-|<small>''[[10 January]] [[1972]]'' to [[16 May]] [[1997]]||'''[[Joseph Mobutu|Mobutu Sese Seko]]''', <small>President
-||<small>''(contd.)''; Hitherto named [[Joseph Mobutu|'''Joseph'''-Désiré '''Mobutu''']]
+|<small>''[[10 January]] [[1972]]'' to [[16 May]] [[1997]]||'''[[Joseph Mobutu|Mobutu Sese Seko]]''', <small>Mokambi ekolo
+||<small>''(contd.)''; awa likolo na nkombo [[Joseph Mobutu|'''Joseph'''-Désiré '''Mobutu''']]
 |- valign=top
 |colspan="4"|'''[[Repubiliki ya Kɔ́ngɔ Demokratiki]]''' 
 |- valign=top bgcolor="#ffffec"
-|<small>[[17 May]] [[1997]] to ''[[29 May]] [[1997]]''||'''[[Laurent-Désiré Kabila]]''', <small>Head of State||rowspan="2"|<small>AFDL||&nbsp;
+|<small>[[17 May]] [[1997]] to ''[[29 May]] [[1997]]''||'''[[Laurent-Désiré Kabila]]''', <small>Mokambi leta||rowspan="2"|<small>AFDL||&nbsp;
 |- valign=top bgcolor="#ffffec"
-|<small>''[[29 May]] [[1997]]'' to [[16 January]] [[2001]]||'''[[Laurent-Désiré Kabila]]''', <small>President||&nbsp;
+|<small>''[[29 May]] [[1997]]'' to [[16 January]] [[2001]]||'''[[Laurent-Désiré Kabila]]''', <small>Mokambi ekolo||&nbsp;
 |- valign=top bgcolor="#ffffec"
-|<small>[[17 January]] [[2001]] to ''[[26 January]] [[2001]]''||'''[[Joseph Kabila]]''', <small>interim President||rowspan="3"|<small> AFDL||&nbsp;
+|<small>[[17 January]] [[2001]] to ''[[26 January]] [[2001]]''||'''[[Joseph Kabila]]''', <small>Mokambi ekolo a.i. ||rowspan="3"|<small> AFDL||&nbsp;
 |- valign=top bgcolor="#ffffec"
-|<small>''[[26 January]] [[2001]]'' to ''[[8 April]] [[2003]]''||'''[[Joseph Kabila]]''', <small>President||&nbsp;
-|- valign=top bgcolor="#ffffec"
-|<small>''[[8 April]] [[2003]]'' to present||'''[[Joseph Kabila]]''', <small>interim President||&nbsp;
+|<small>''[[26 January]] [[2001]]'' to lelo''||'''[[Joseph Kabila]]''', <small>Mokambi ekolo||&nbsp;
 |}
 
 === Baparti:- ===
@@ -55,9 +53,9 @@ Makomi oyo elandi elakisi liste ya '''bakambi ekolo''' oyo balandanaki o ekolo o
 
 === See also:- ===
 *[[Kongo]]
-**[[Bakambi bulamatari of the Kɔ́ngɔ-Kinshasa]]
+**[[Molɔngɔ Bakambi bulamatari of the Kɔ́ngɔ-Kinshasa|Bakambi bulamatari of the Kɔ́ngɔ-Kinshasa]]
 **[[Bakambi ekolo o ntangu ya Ekolo ya bonsomi ya Kɔ́ngɔ]] 
-**[[Bakambi ekolo o ntangu ya Congo Belge]] 
+**[[Molɔngɔ Bakambi ekolo o ntangu ya Congo Belge|Bakambi ekolo o ntangu ya Congo Belge]] 
 *[[Zaire]]
 
 [[Category:Politics bya Kɔ́ngɔ-Kinshasa]]
