*Empty MediaWiki Message*

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -56,7 +56,7 @@ Mingi se na kati ya bakota bya ekolo bokoyeba etando ya bikela, mabele, banyama 
 [[Mongo|Bamongo]] bazali na bakombo mingi ya nzete ya mbila na maye manso basalelaka. Solo, nzete ya mbila eyebani kaka mpona mafuta na masanga te. Eyebani lokola nkisi ekosilisa makono, naye mpe bakosala bitunga mpe bikila kila.
 
 == Historia ==
-''Article détaillé : [[Historia ya Kongo Kinshasa]]''
+''Ekakoli ya molayi : [[Historia ya Kongo Kinshasa]]''
 
 ''Tala mpe: [[Kongó (ntangó ya banɔ́kɔ́)]]''
 
@@ -126,7 +126,7 @@ Il est à remarquer que, afin de se démarquer de la culture [[colonialisme|colo
 Actuellement l'armée française maintient la présence de militaires français dans le cadre de [[MONUC]]. Mais les violences continuent et la guerre aurait fait 3.8 millions de morts (chiffres d'un responsable congolais commentant un rapport de la commission des droits de l'Homme de l'ONU, 2003 : [http://www.un.org/News/fr-press/docs/2003/DHG199.doc.htm])
 
 == Démographie ==
-''Article détaillé : [[fr:Démographie de la République démocratique du Congo]]''
+''Ekakoli ya molayi : [[fr:Démographie de la République démocratique du Congo]]''
 
 
 [[Image:Congo dem demographie.png|thumb|650px|center|Évolution de la démographie entre 1961 et 2003 (chiffre de la [[Organisation des Nations Unies pour l'alimentation et l'agriculture|FAO]], 2005). Population en milliers d'habitants.]]
@@ -135,7 +135,7 @@ Actuellement l'armée française maintient la présence de militaires français 
 
 == Ba Provinsi bya Kɔ́ngɔ Kinshasa ==
 [[Image:DCongoNumbered.png|thumb|300px|right]]
-''Article ya molayi : [[Ba Provinsi bya Kɔ́ngɔ Kinshasa]]''
+''Ekakoli ya molayi : [[Ba Provinsi bya Kɔ́ngɔ Kinshasa]]''
 
 Biteni mikonzi bya Kɔ́ngɔ Kinshasa mibengami [[Provinsi]]. Ba provinsi ya Kɔ́ngɔ Kinshasa bazali:
 
@@ -184,7 +184,7 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 * Babenga kombo Bambuti mpe Baife baye bavandi na zamba Ituri bazali na bikela bya bango. Bambuti bayebi banyama ya koleka kama mibale, mpe banzete ya koleka kama moko. Bakoboma nyama na basinga. Kasi Baife, bakobenga mpe bakoboma nyama na mbanzi mpe na makonga.
 
 == Politiki ==
-''Article ya molayi : [[Politiki bya Kongo Kinshasa]]''
+''Ekakoli ya molayi : [[Politiki bya Kongo Kinshasa]]''
 
 '''Bakambi Ekolo''' :
 * [[1960]] - [[1965]] [[Joseph Kasavubu]]
@@ -219,22 +219,22 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 * [[1997]] - 1997     [[Étienne Tshisekedi]]
 * [[1997]] - 1997     [[Likulia Bolongo]]
 
-== Géographie ==
-[[Image:Map - DR Congo, major languages.png|thumb|width:260px|right|Bakarta ya Nkota makonzi ya Babantu oyo makutahi o Ekolo Kɔ́ngɔ]]
+== Jyografi ==
+[[Image:Map - DR Congo, major languages.png|thumb|width:260px|right|Bakarta ya Nkota makonzi ya Babantu oyo makutani o Ekolo Kɔ́ngɔ]]
 
-''Article détaillé : [[Géographie de la République démocratique du Congo]]''
+''Ekakoli ya molayi : [[Jyografi bya Kɔ́ngɔ-Kinshasa]]''
 * Tala mpe : [[Zamba o Bassin ya ebale Kɔ́ngɔ]] | [[Liste des villes de la République démocratique du Congo]]
 
-== Économie ==
-''Article détaillé : [[Économie de la République démocratique du Congo]]''
+== Ekonomi ==
+''Ekakoli ya molayi : [[Ekonomi ya Kɔ́ngɔ-Kinshasa]]''
 
-''Voir aussi : [[Coltan]]''
+''Tala mpe : [[Coltan]]''
 
 == Kiltiri ==
-''Article ya molayi : [[Kiltiri ya Kongo Kinshasa]]''
+''Ekakoli ya molayi : [[Kiltiri ya Kɔ́ngɔ-Kinshasa]]''
 
 {{entête tableau charte}}
-|+ '''Bafeti mpe Mikolo ya bopemi'''
+|+ '''Bafeti mpe Mikolo ya bopémi'''
 ! Date !! {{nwt|Nkombo na lifalansé}} !! {{nwt|Nkombo na lingala}} !! Remarques
 |-
 | [[4 janvier]] || journée des Martyrs de l'indépendance || ||
@@ -261,7 +261,7 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 * [[Category:Bisé ya Afrika]] 
 * [[Category:Bisé]]
 * [[Category:Repubiliki ya Kɔ́ngɔ Demokratiki]]
-* [[Category:Kongo Kinshasa]]
+* [[Category:Kongo Kinshasa|Kɔ́ngɔ-Kinshasa]]
 <br clear="all"/>
 
 == [[wikipédia:Liens externes|Makasa-Web olibanda Wikipedia]] ==
@@ -301,5 +301,6 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 [[ru:&#1050;&#1086;&#1085;&#1075;&#1086;, &#1044;&#1077;&#1084;&#1086;&#1082;&#1088;&#1072;&#1090;&#1080;&#1095;&#1077;&#1089;&#1082;&#1072;&#1103; &#1056;&#1077;&#1089;&#1087;&#1091;&#1073;&#1083;&#1080;&#1082;&#1072;]]
 [[sl:Demokrati&#269;na republika Kongo]]
 [[sv:Demokratiska republiken Kongo]]
+[[sw:Jamhuri ya Kidemokraia cha Kongo]]
 [[zh-cn:&#21018;&#26524;&#27665;&#20027;&#20849;&#21644;&#22269;]]
 $
