--- a/Swisi.mw
+++ b/Swisi.mw
@@ -34,7 +34,7 @@ cctld		= [[.ch]] |
 calling_code	= 41|
 footnotes 	= |
 }}
-== History ==
+== Historia ==
 ''Article ya molayi: [[Historia ya Swisi]]''
 
 Switzerland is a federation of relatively autonomous [[Cantons of Switzerland|canton]]s, some of which have a history of confederacy that goes back more than 700 years, arguably putting them among the world's oldest surviving [[republic]]s.
