--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -56,7 +56,7 @@ Mingi se na kati ya bakota bya ekolo bokoyeba etando ya bikela, mabele, banyama 
 [[Mongo|Bamongo]] bazali na bakombo mingi ya nzete ya mbila na maye manso basalelaka. Solo, nzete ya mbila eyebani kaka mpona mafuta na masanga te. Eyebani lokola nkisi ekosilisa makono, naye mpe bakosala bitunga mpe bikila kila.
 
 == Historia ==
-''Ekakoli ya molayi : [[Historia ya Kongo Kinshasa]]''
+''Ekakoli ya molayi : [[Historia ya Kɔ́ngɔ-Kinshasa]]''
 
 ''Tala mpe: [[Kongó (ntangó ya banɔ́kɔ́)]]''
 
