*Empty MediaWiki Message*

--- a/Wikitravel.mw
+++ b/Wikitravel.mw
@@ -5,7 +5,7 @@ Wikitravel ebandemaki na Yuli ya [[2003]], na makanisi moko-moko mpenza na [[Wik
 
 Wikitravel esalemi na nkotá mingi. Ekútánémi na nkóta motpba (6).  Pona kotala:
 
-*[[Ingɛ́lesi]] [http://wikitravel.org/en/article/Main_Page Wikitravel]
+*[[Lingɛlɛ́sa]] [http://wikitravel.org/en/article/Main_Page Wikitravel]
 *[[Kiromani]] [http://wikitravel.org/ro/Portal]
 *[[Lifalansé]] [http://wikitravel.org/fr/Accueil]
 *[[Kialemani]] [http://wikitravel.org/de/Hauptseite]
