/* [[wikipédia:Liens externes|Makasa-Web olibanda Wikipedia]] */

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -276,6 +276,7 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 * [http://www.miningcongo.cd/ Site du Ministère des mines]
 * [http://www.ccre.cd/ Site du Comité de Coordination des Ressources Extérieures]
 * [http://www.ucoprdc.org/ Site de l'Unité de coordination du Projet]
+* [http://www.groupelavenir.net/lingala.htm/ L'Avenir - Basango na Lingala]
 <br clear="all"/>
 {{Pays d'Afrique}}
 
