/* [[wikipédia:Liens externes|Makasa-Web olibanda Wikipedia]] */

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -290,7 +290,6 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 [[fr:République démocratique du Congo]]
 [[it:Repubblica Democratica del Congo]]
 [[lt:Kongo Demokratin&#279; Respublika]]
-[[ln:Kongo-Kinshasa]]
 [[lv:Kongo DR]]
 [[ms:Republik Demokratik Congo]]
 [[nds:Demokraatsche Republiek Kongo]]
@@ -302,6 +301,6 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 [[ru:&#1050;&#1086;&#1085;&#1075;&#1086;, &#1044;&#1077;&#1084;&#1086;&#1082;&#1088;&#1072;&#1090;&#1080;&#1095;&#1077;&#1089;&#1082;&#1072;&#1103; &#1056;&#1077;&#1089;&#1087;&#1091;&#1073;&#1083;&#1080;&#1082;&#1072;]]
 [[sl:Demokrati&#269;na republika Kongo]]
 [[sv:Demokratiska republiken Kongo]]
-[[sw:Jamhuri ya Kidemokraia cha Kongo]]
+[[sw:Jamhuri ya Kidemokrasia cha Kongo]]
 [[zh-cn:&#21018;&#26524;&#27665;&#20027;&#20849;&#21644;&#22269;]]
 $
