*Empty MediaWiki Message*

--- a/Lingála.mw
+++ b/Lingála.mw
@@ -21,7 +21,7 @@ Comment améliorer un article sur une langue?
 * sons
 * bibliographie
 
-{{InterWiki|code:ln}}
+{{InterWiki|code=ln}}
 >> voir come exemple: http://en.wikipedia.org/wiki/Lingala_language 
 ----
 
