--- a/Molɔngɔ́_ya_bisé_ya_mokili.mw
+++ b/Molɔngɔ́_ya_bisé_ya_mokili.mw
@@ -19,7 +19,7 @@
 [[Gabon]] - [[Gambia]] - [[Ghana]] - [[Gine]] - [[Gine-Bisau]] - [[Gine-Ekwatorial]] (Mambénga)
 
 === H ===
-[[Holanda]] (Bikolo ya Se)
+[[Holanda]] (Bikolo ya Sé)
 
 === I ===
 [[India]] - [[Ingɛlɛ́tɛlɛ]]
