--- a/Ingɛlɛ́tɛlɛ.mw
+++ b/Ingɛlɛ́tɛlɛ.mw
@@ -2,54 +2,56 @@
 {{voir homonymes}}
 
 
-{|border="1" align="right" width="300px" cellpadding="5" style="text-align:center;border-collapse:collapse;margin: 0.5em 0 1em 1em;"
-|+style="margin-bottom: 0.5em" | <font size="+1">Royaume-Uni<br /> de Grande-Bretagne<br /> et d'Irlande du Nord</font> [[#Noms officiels|*]]
-|-----
-| style="background:#efefef;" align="center" colspan="2" |
-{| border="0" cellpadding="2" cellspacing="0"
-|-----
-| align="center" width="140px" | [[Image:Uk_flag_medium.png]]
-| align="center" width="140px" | [[Image:Britcoat2.jpg]]
-|-----
-| align="center" width="140px" | ([[drapeau du Royaume-Uni|détail]])
-| align="center" width="140px" | ([[armes royales du Royaume-Uni|agrandissement]])
-|}
-|-----
-| align="center" colspan="2" style="border-bottom:3px solid gray;" | <font size="-1">''[[Devise nationale|Devise royale]]: Dieu Et Mon Droit''</font>
-|-----
-| align="center" colspan="2" | [[image:royaume-uni-de-grande-bretagne-et-d-irlande-du-nord-localisation.png|Localisation du Royaume-Uni]]
-|-----
-| [[Langue]] officielle  
-| Aucune. [[anglais]] ''de facto'' ; égal avec l'[[écossais]] en [[Écosse]] et le [[gallois]] au [[pays de Galles]]
-|-----
-| [[Capitale]] || [[Londres]]
-|-----
-| [[Monarques de Grande-Bretagne|Reine]]  
-| [[Élisabeth II du Royaume-Uni|Élisabeth II]]
-|-----
-| [[Premiers ministres du Royaume-Uni|Premier ministre]]
-| [[Tony Blair]]
-|-----
-| [[Superficie]]<br />&nbsp;- Totale <br />&nbsp;- % eau
-| [[Liste des pays par superficie|Classé 77{{e}}]]<br />244 101 [[kilomètre carré|km²]]<br />1,3 %              
-|-----
-| [[Population]]<br />&nbsp;- Total ([[2003]])<br />&nbsp;- [[Densité de population|Densité]]
-| [[Liste des pays par population|Classé 20{{e}}]]<br />59 553 800 habitants<br />244 hab./km²
-|-----
-| [[Indépendance]] || Formé en [[1801]]
-|-----
-| [[Monnaie]] || [[Livre sterling]]
-|-----
-| [[Fuseau horaire]]  
-| [[Temps universel coordonné|UTC]], été : UTC +1
-|-----
-| [[Hymne national]] || [[God Save the Queen]] (de fait)
-|-----
-| [[Internet TLD|Domaine Internet]] || .uk
-|-----
-| [[Liste des indicatifs téléphoniques internationaux par pays|Indicatif téléphonique]]
-| 44
-|}
+{Infobox_Country|
+native_name = United Kingdom of Great Britain and Northern Ireland |
+common_name = the United Kingdom |
+image_flag = uk flag large.png |
+image_coat = UK_Royal_Coat_of_Arms.png |
+image_map = LocationUnitedKingdom.png |
+national_motto = [[Dieu et mon droit]] (Royal motto)<br>([[French language|French]]: God and my right)''<sup>2</sup></small> |
+national_anthem = [[God Save the Queen]]<sup>3</sup> |
+official_languages = [[Languages in the United Kingdom|None]]; [[English language|English]] ''[[de facto]]'' <sup>4</sup> |
+capital = [[London]] |
+latd=51|latm=30|latNS=N|longd=0|longm=7|longEW=W|
+largest_city = [[London]] |
+government_type = [[Constitutional monarchy]] |
+leader_titles = [[British monarchy|Queen]]<br>[[Prime Minister of the United Kingdom|Prime Minister]] |
+leader_names =  [[Elizabeth II of the United Kingdom|Elizabeth II]]<br>[[Tony Blair]] |
+area_rank = 77th |
+area_magnitude = 1 E11 |
+area = 244,820 |
+percent_water = 1.3% |
+population_estimate_year = July 2003 |
+population_estimate = 59,553,800 <sup>6</sup>|
+population_estimate_rank = 22nd |
+population_census = 58,789,194 |
+population_census_year = 2001 |
+population_density = 246.5 |
+population_density_rank = 49th |
+GDP_PPP_year = 2005 |
+GDP_PPP = $1,825,837 million |
+GDP_PPP_rank = 6th |
+GDP_PPP_per_capita = $30,658 |
+GDP_PPP_per_capita_rank = 15th |
+sovereignty_type = [[Act of Union 1800|Establishment]] |
+established_events =  |
+established_dates = 1801<sup>5</sup>|
+currency = [[Pound Sterling|British pound]] (&pound;) |
+currency_code =  GBP |
+time_zone = [[GMT]] |
+utc_offset = +0 |
+time_zone_DST = [[British Summer Time|BST]] |
+utc_offset_DST = +1 |
+cctld= [[.uk]]<sup>7</sup> |
+calling_code = 44 |
+footnotes = <sup>1</sup>In the UK, [[Languages in the United Kingdom|some other language]]s have been officially recognised as legitimate [[autochthonous language|autochthonous]] [[regional language|(regional) languages]] under the [[European Charter for Regional or Minority Languages]]. In each of these, the UK's official name is as follows:
+*[[Welsh language|Welsh]]: ''Teyrnas Unedig Prydain Fawr a Gogledd Iwerddon''
+*<small>[[Scottish Gaelic]]: ''An Rìoghachd Aonaichte na Breatainn Mhòr agus Eirinn a Tuath''
+*<small>[[Irish language|Irish]]: ''Ríocht Aontaithe na Breataine Móire agus Tuaisceart na hÉireann''
+*<small>[[Cornish language|Cornish]]: ''An Rywvaneth Unys a Vreten Veur hag Iwerdhon Glédh''
+*<small>[[Scots language|Lowland Scots]]: ''Unitit Kinrick o Great Breetain an Northren Ireland''<br/>
+<small><sup>2</sup> The Royal motto in Scotland is ''Nemo Me Impune Lacessit'' ([[Latin]]: "No-one harms me with impunity").<br><sup>3</sup> Unofficial.<br><sup>4</sup> Officially recognised regional languages:<br>in [[Wales]]: [[Welsh language|Welsh]]; and in [[Scotland]]: [[Scottish Gaelic language|Scottish Gaelic]] since 2004 Act.<br><sup>5</sup> Formed as ''United Kingdom of Great Britain and Ireland''. Name changed to the ''United Kingdom of Great Britain and Northern Ireland'' in 1927.<br><sup>6</sup> Official estimate provided by the UK [[Office for National Statistics]]. As of April 2005, the July 2004 estimates were not yet available.<br><sup>7</sup> [[ISO 3166-1]] is [[Great Britain|GB]], but [[.gb]] is unused}}
+
 Le '''Royaume-Uni de Grande-Bretagne et d'Irlande du Nord''' est un État indépendant d'[[Europe]] composé de la [[Grande-Bretagne]] ([[Angleterre]], [[Écosse]], [[Pays de Galles]]), de l'[[Irlande du Nord]] ainsi que de territoires d'outre-mer. Souvent appelé de façon simplifiée '''Royaume-Uni''', la plupart de son territoire est situé à proximité de la côte nord-ouest de l'Europe continentale et est entouré par la [[mer du Nord]], la [[Manche (mer)|Manche]] et l'[[océan Atlantique]].
 
 Nota : Il ne faut pas confondre le Royaume-Uni avec l'Angleterre, l'un des pays qui le constituent, ni avec la Grande-Bretagne, l'île principale.
