*Empty MediaWiki Message*

--- a/Ingɛlɛ́tɛlɛ.mw
+++ b/Ingɛlɛ́tɛlɛ.mw
@@ -2,7 +2,7 @@
 {{voir homonymes}}
 
 
-{Infobox_Country|
+{{Infobox_Country|
 native_name = United Kingdom of Great Britain and Northern Ireland |
 common_name = the United Kingdom |
 image_flag = uk flag large.png |
