*Empty MediaWiki Message*

--- a/Ingɛlɛ́tɛlɛ.mw
+++ b/Ingɛlɛ́tɛlɛ.mw
@@ -1,27 +1,32 @@
 [[af:Verenigde Koninkryk]] [[ar:مملكة متحدة]] [[bg:Обединено кралство]] [[br:Rouantelezh Unanet]] [[ca:Regne Unit de la Gran Bretanya i Irlanda del Nord]] [[cs:Velká Británie]] [[cy:Y Deyrnas Unedig]] [[da:Det Forenede Kongerige]] [[de:Großbritannien und Nordirland]] [[et:Suurbritannia]] [[el:Ηνωμένο Βασίλειο]] [[en:United Kingdom]] [[es:Reino Unido]] [[eo:Unuigita Reĝlando de Britio kaj Nord-Irlando]] [[ga:An Ríocht Aontaithe]] [[gl:Reino Unido]] [[ko:영국]] [[id:Britania Raya]] [[ia:Regno Unite]] [[it:Regno Unito]] [[he:הממלכה המאוחדת]] [[la:Regnum Unitum]] [[lt:Jungtinė Karalystė]] [[ms:United Kingdom]] [[nl:Verenigd Koninkrijk]] [[ja:イギリス]] [[no:Storbritannia]] [[oc:Reialme Unit]] [[nds:Groot Britannien]] [[pl:Wielka Brytania]] [[pt:Reino Unido]] [[ro:Regatul Unit]] [[rm:Reginavel Unì da la Gronda Britannia ed Irlanda dal Nord]] [[ru:Великобритания]] [[simple:United Kingdom]] [[sl:Združeno kraljestvo]] [[fi:Yhdistynyt kuningaskunta]] [[sv:Storbritannien]][[tl:Nagkakaisang Kaharian]] [[ur:برطانیہ]] [[vi:Liên hiệp Vương quốc Anh và Bắc Ai-len]] [[zh-cn:英国]] [[zh-tw:英國]] [[zh-min-nan:Li&#226;n-ha&#781;p &#212;ng-kok]]
 {{voir homonymes}}
 
+Le '''Royaume-Uni de Grande-Bretagne et d'Irlande du Nord''' est un État indépendant d'[[Europe]] composé de la [[Grande-Bretagne]] ([[Angleterre]], [[Écosse]], [[Pays de Galles]]), de l'[[Irlande du Nord]] ainsi que de territoires d'outre-mer. Souvent appelé de façon simplifiée '''Royaume-Uni''', la plupart de son territoire est situé à proximité de la côte nord-ouest de l'Europe continentale et est entouré par la [[mer du Nord]], la [[Manche (mer)|Manche]] et l'[[océan Atlantique]].
+
+Nota : Il ne faut pas confondre le Royaume-Uni avec l'Angleterre, l'un des pays qui le constituent, ni avec la Grande-Bretagne, l'île principale.
+
+Ni l'[[île de Man]], ni les bailliages de [[Jersey]] et de [[Guernesey]] ne font partie du Royaume-Uni ; ce sont des dépendances de la [[Couronne britannique]].
 
 {{Infobox_country|
 native_name = United Kingdom of Great Britain and Northern Ireland |
-common_name = the United Kingdom |
+common_name = Ingɛlɛ́tɛlɛ |
 image_flag = uk flag large.png |
 image_coat = UK_Royal_Coat_of_Arms.png |
 image_map = LocationUnitedKingdom.png |
-national_motto = [[Dieu et mon droit]] (Royal motto)<br>([[French language|French]]: God and my right)''<sup>2</sup></small> |
+national_motto = [[Dieu et mon droit]] (Royal motto)<br>([[Lifalansé]]: Nzambe nde likokí na ngai)''<sup>2</sup></small> |
 national_anthem = [[God Save the Queen]]<sup>3</sup> |
-official_languages = [[Languages in the United Kingdom|None]]; [[English language|English]] ''[[de facto]]'' <sup>4</sup> |
+official_languages = [[Nkotá ya Ingɛlɛ́tɛlɛ|None]]; [[Lingɛlɛsa]] ''[[de facto]]'' <sup>4</sup> |
 capital = [[London]] |
 latd=51|latm=30|latNS=N|longd=0|longm=7|longEW=W|
 largest_city = [[London]] |
 government_type = [[Constitutional monarchy]] |
 leader_titles = [[British monarchy|Queen]]<br>[[Prime Minister of the United Kingdom|Prime Minister]] |
-leader_names =  [[Elizabeth II of the United Kingdom|Elizabeth II]]<br>[[Tony Blair]] |
+leader_names =  [[Elizabeth II ya Ingɛlɛ́tɛlɛ|Elizabeth II]]<br>[[Tony Blair]] |
 area_rank = 77th |
 area_magnitude = 1 E11 |
 area = 244,820 |
 percent_water = 1.3% |
-population_estimate_year = July 2003 |
+population_estimate_year = Yuli 2003 |
 population_estimate = 59,553,800 <sup>6</sup>|
 population_estimate_rank = 22nd |
 population_census = 58,789,194 |
@@ -44,23 +49,16 @@ time_zone_DST = [[British Summer Time|BST]] |
 utc_offset_DST = +1 |
 cctld= [[.uk]]<sup>7</sup> |
 calling_code = 44 |
-footnotes = <sup>1</sup>In the UK, [[Languages in the United Kingdom|some other language]]s have been officially recognised as legitimate [[autochthonous language|autochthonous]] [[regional language|(regional) languages]] under the [[European Charter for Regional or Minority Languages]]. In each of these, the UK's official name is as follows:
+footnotes = <sup>1</sup>In the UK, [[Nkotá ya {{{common_name}}}|some other language]]s have been officially recognised as legitimate [[autochthonous language|autochthonous]] [[regional language|(regional) languages]] under the [[European Charter for Regional or Minority Languages]]. In each of these, the UK's official name is as follows:
 *[[Welsh language|Welsh]]: ''Teyrnas Unedig Prydain Fawr a Gogledd Iwerddon''
-*<small>[[Scottish Gaelic]]: ''An Rìoghachd Aonaichte na Breatainn Mhòr agus Eirinn a Tuath''
-*<small>[[Irish language|Irish]]: ''Ríocht Aontaithe na Breataine Móire agus Tuaisceart na hÉireann''
+*<small>[[Gayeliki y'Ekósi]]: ''An Rìoghachd Aonaichte na Breatainn Mhòr agus Eirinn a Tuath''
+*<small>[[Kirlándi]]: ''Ríocht Aontaithe na Breataine Móire agus Tuaisceart na hÉireann''
 *<small>[[Cornish language|Cornish]]: ''An Rywvaneth Unys a Vreten Veur hag Iwerdhon Glédh''
-*<small>[[Scots language|Lowland Scots]]: ''Unitit Kinrick o Great Breetain an Northren Ireland''<br/>
+*<small>[[Kiekósi]]: ''Unitit Kinrick o Great Breetain an Northren Ireland''<br/>
 <small><sup>2</sup> The Royal motto in Scotland is ''Nemo Me Impune Lacessit'' ([[Latin]]: "No-one harms me with impunity").<br><sup>3</sup> Unofficial.<br><sup>4</sup> Officially recognised regional languages:<br>in [[Wales]]: [[Welsh language|Welsh]]; and in [[Scotland]]: [[Scottish Gaelic language|Scottish Gaelic]] since 2004 Act.<br><sup>5</sup> Formed as ''United Kingdom of Great Britain and Ireland''. Name changed to the ''United Kingdom of Great Britain and Northern Ireland'' in 1927.<br><sup>6</sup> Official estimate provided by the UK [[Office for National Statistics]]. As of April 2005, the July 2004 estimates were not yet available.<br><sup>7</sup> [[ISO 3166-1]] is [[Great Britain|GB]], but [[.gb]] is unused}}
 
-Le '''Royaume-Uni de Grande-Bretagne et d'Irlande du Nord''' est un État indépendant d'[[Europe]] composé de la [[Grande-Bretagne]] ([[Angleterre]], [[Écosse]], [[Pays de Galles]]), de l'[[Irlande du Nord]] ainsi que de territoires d'outre-mer. Souvent appelé de façon simplifiée '''Royaume-Uni''', la plupart de son territoire est situé à proximité de la côte nord-ouest de l'Europe continentale et est entouré par la [[mer du Nord]], la [[Manche (mer)|Manche]] et l'[[océan Atlantique]].
-
-Nota : Il ne faut pas confondre le Royaume-Uni avec l'Angleterre, l'un des pays qui le constituent, ni avec la Grande-Bretagne, l'île principale.
-
-Ni l'[[île de Man]], ni les bailliages de [[Jersey]] et de [[Guernesey]] ne font partie du Royaume-Uni ; ce sont des dépendances de la [[Couronne britannique]].
-
-
-== Histoire ==
-''Article détaillé : [[Histoire du Royaume-Uni]]''
+== Historia ==
+''Ekakoli ya molayi : [[Historia ya {{{common_name}}}]]''
 
 * Liste des [[Monarques de Grande-Bretagne|monarques]]
 * [[Premiers ministres du Royaume-Uni|Liste des premiers ministres]]
