--- a/Ingɛlɛ́tɛlɛ.mw
+++ b/Ingɛlɛ́tɛlɛ.mw
@@ -58,7 +58,7 @@ footnotes = <sup>1</sup>In the UK, [[Nkotá ya {{{common_name}}}|some other lang
 <small><sup>2</sup> The Royal motto in Scotland is ''Nemo Me Impune Lacessit'' ([[Latin]]: "No-one harms me with impunity").<br><sup>3</sup> Unofficial.<br><sup>4</sup> Officially recognised regional languages:<br>in [[Wales]]: [[Welsh language|Welsh]]; and in [[Scotland]]: [[Scottish Gaelic language|Scottish Gaelic]] since 2004 Act.<br><sup>5</sup> Formed as ''United Kingdom of Great Britain and Ireland''. Name changed to the ''United Kingdom of Great Britain and Northern Ireland'' in 1927.<br><sup>6</sup> Official estimate provided by the UK [[Office for National Statistics]]. As of April 2005, the July 2004 estimates were not yet available.<br><sup>7</sup> [[ISO 3166-1]] is [[Great Britain|GB]], but [[.gb]] is unused}}
 
 == Historia ==
-''Ekakoli ya molayi : [[Historia ya {{{1}}}]]''
+''Ekakoli ya molayi : [[Historia ya Ingɛlɛ́tɛlɛ]]''
 
 * Liste des [[Monarques de Grande-Bretagne|monarques]]
 * [[Premiers ministres du Royaume-Uni|Liste des premiers ministres]]
