*Empty MediaWiki Message*

--- a/Ingɛlɛ́tɛlɛ.mw
+++ b/Ingɛlɛ́tɛlɛ.mw
@@ -49,8 +49,8 @@ time_zone_DST = [[British Summer Time|BST]] |
 utc_offset_DST = +1 |
 cctld= [[.uk]]<sup>7</sup> |
 calling_code = 44 |
-footnotes = <sup>1</sup>In the UK, [[Nkotá ya {{{common_name}}}|some other language]]s have been officially recognised as legitimate [[autochthonous language|autochthonous]] [[regional language|(regional) languages]] under the [[European Charter for Regional or Minority Languages]]. In each of these, the UK's official name is as follows:
-*[[Welsh language|Welsh]]: ''Teyrnas Unedig Prydain Fawr a Gogledd Iwerddon''
+footnotes = <sup>1</sup>In the UK, [[Nkotá ya {{{1}}}|some other language]]s have been officially recognised as legitimate [[autochthonous language|autochthonous]] [[regional language|(regional) languages]] under the [[European Charter for Regional or Minority Languages]]. In each of these, the UK's official name is as follows:
+*<small>[[Welsh language|Welsh]]: ''Teyrnas Unedig Prydain Fawr a Gogledd Iwerddon''
 *<small>[[Gayeliki y'Ekósi]]: ''An Rìoghachd Aonaichte na Breatainn Mhòr agus Eirinn a Tuath''
 *<small>[[Kirlándi]]: ''Ríocht Aontaithe na Breataine Móire agus Tuaisceart na hÉireann''
 *<small>[[Cornish language|Cornish]]: ''An Rywvaneth Unys a Vreten Veur hag Iwerdhon Glédh''
