--- a/Swisi.mw
+++ b/Swisi.mw
@@ -136,7 +136,7 @@ The population varies between 15,000 (Appenzell Innerrhoden) and 1,253,500 (Zür
 The following are [[enclave]]s within Switzerland: [[Büsingen]] is territory of [[Germany]], [[Campione d'Italia]] is territory of [[Italy]].
 
 == Jyografi ==
-''Main article: [[Jyografi ya Swiss]]''
+''Main article: [[Jyografi ya Swisi]]''
 
 [[Image:Map-of-Switzerland.png|thumb|right|Map of Switzerland (overview)]]
 
