*Empty MediaWiki Message*

--- a/Joseph_Kabila.mw
+++ b/Joseph_Kabila.mw
@@ -1,3 +1,3 @@
 [[category:Moto wa politiki (Kongo-Kinshasa)]]
 {{ndambo}}
-[[Image:Joseph Kabila2.JPG|thumb|Joseph Kabila]]
+[[Image:Joseph_Kabila2.jpg|thumb|Joseph Kabila]]
