*Empty MediaWiki Message*

--- a/Joseph_Kabila.mw
+++ b/Joseph_Kabila.mw
@@ -1,3 +1,13 @@
 [[category:Moto wa politiki (Kongo-Kinshasa)]]
 {{ndambo}}
-[[Image:Joseph_Kabila2.jpg|thumb|Joseph Kabila]]
+[[Image:Joseph_Kabila2.jpg|270px|thumb|Joseph Kabila]]
+
+'''Joseph Kabila Kabange''' (born [[1971]]) became president of the [[Democratic Republic of the Congo]] after the assassination of his father [[Laurent-Désiré Kabila]] in January [[2001]].  He has attempted to end the civil war and remove foreign troops from the country, with some success. Following a peace agreement, an interim administration was set up in [[2003]], including the leaders of the country's two main rebel groups as vice-presidents (two other vice-presidents are representatives of the civilian opposition and government supporters respectively). Proposals have been made to hold elections before the end of [[2005]].
+
+On [[March 28]], [[2004]], a coup attempt or mutiny around the capital [[Kinshasa]], allegedly organized by supporters of the late president [[Mobutu Sese Seko]], failed. On [[June 11]], 2004, coup plotters led by Major [[Eric Lenge]] attempted to take power, declaring that the country's peace process was not working, but were defeated by loyalist troops.
+
+Kabila fought in his father's rebel army, during the campaign that brought him to power. He recieved military training from the neighbouring governments of [[Uganda]] and [[Rwanda]]. He has served in numerous posts prior to becoming Prseident, Major General and Chief of Staff within the Army, heading up the government forces fight against former rebels. However he was considered young and inexperienced to when he became President, following the murder of his father, [[Laurent Kabila]].  
+
+==Mankásá olibanda Wikipedia==
+
+*[http://news.bbc.co.uk/1/hi/world/africa/country_profiles/1076399.stm BBC Country Profile]*
