*Empty MediaWiki Message*

--- a/Joseph_Kabila.mw
+++ b/Joseph_Kabila.mw
@@ -1,6 +1,6 @@
 [[category:Moto wa politiki (Kongo-Kinshasa)]]
 {{ndambo}}
-[[Image:Joseph_Kabila2.jpg|270px|thumb|Joseph Kabila]]
+[[Image:Joseph_kabila2.jpg|270px|thumb|Joseph Kabila]]
 
 '''Joseph Kabila Kabange''' (born [[1971]]) became president of the [[Democratic Republic of the Congo]] after the assassination of his father [[Laurent-Désiré Kabila]] in January [[2001]].  He has attempted to end the civil war and remove foreign troops from the country, with some success. Following a peace agreement, an interim administration was set up in [[2003]], including the leaders of the country's two main rebel groups as vice-presidents (two other vice-presidents are representatives of the civilian opposition and government supporters respectively). Proposals have been made to hold elections before the end of [[2005]].
 
