--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -190,7 +190,7 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 * [[1960]] - [[1965]] [[Joseph Kasavubu]]
 * [[1965]] - [[1997]] [[Mobutu Sese Seko]]
 * [[1997]] - [[2001]] [[Laurent-Désiré Kabila]]
-* [[2001]] - auj. [[Joseph Kabila]]
+* [[2001]] - lɛlɔ́. [[Joseph Kabila]]
 
 '''Bakambi Bulamatari''' :
 * [[1960]] - 1960     [[Patrice Lumumba]]
