--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -235,7 +235,7 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 
 {{entête tableau charte}}
 |+ '''Bafeti mpe Mikolo ya bopémi'''
-! Date !! {{nwt|Nkombo na lifalansé}} !! {{nwt|Nkombo na lingala}} !! Remarques
+! Date !! {{nwt|Nkombo na lifalansé}} !! {{nwt|Nkombo na lingala}} !! Ntembe
 |-
 | [[4 janvier]] || journée des Martyrs de l'indépendance || ||
 |- {{ligne grise}}
