*Empty MediaWiki Message*

--- a/Ingɛlɛ́tɛlɛ.mw
+++ b/Ingɛlɛ́tɛlɛ.mw
@@ -16,9 +16,9 @@ image_map = LocationUnitedKingdom.png |
 national_motto = [[Dieu et mon droit]] (Royal motto)<br>([[Lifalansé]]: Nzambe nde likokí na ngai)''<sup>2</sup></small> |
 national_anthem = [[God Save the Queen]]<sup>3</sup> |
 official_languages = [[Nkotá ya Ingɛlɛ́tɛlɛ|None]]; [[Lingɛlɛsa]] ''[[de facto]]'' <sup>4</sup> |
-capital = [[London]] |
+capital = [[Londoni]] |
 latd=51|latm=30|latNS=N|longd=0|longm=7|longEW=W|
-largest_city = [[London]] |
+largest_city = [[Londoni]] |
 government_type = [[Constitutional monarchy]] |
 leader_titles = [[British monarchy|Queen]]<br>[[Prime Minister of the United Kingdom|Prime Minister]] |
 leader_names =  [[Elizabeth II ya Ingɛlɛ́tɛlɛ|Elizabeth II]]<br>[[Tony Blair]] |
