--- a/Ingɛlɛ́tɛlɛ.mw
+++ b/Ingɛlɛ́tɛlɛ.mw
@@ -63,8 +63,8 @@ footnotes = <sup>1</sup>In the UK, [[Nkotá ya Ingɛlɛ́tɛlɛ|some other langu
 * Liste des [[Monarques de Grande-Bretagne|monarques]]
 * [[Premiers ministres du Royaume-Uni|Liste des premiers ministres]]
 
-== Politique ==
-''Article détaillé : [[Politique du Royaume-Uni]]''
+== Politiki ==
+''Article détaillé : [[Politiki ya Ingɛlɛ́tɛlɛ]]''
 
 Le Royaume-Uni est, comme son nom l'indique, un royaume, mais le pouvoir du monarque (actuellement la reine [[Élisabeth II du Royaume-Uni|Élisabeth II]]) est ''de facto'' entièrement cérémonial. Le [[Premier ministre]], actuellement [[Tony Blair]], possède de nombreux pouvoirs.
 
@@ -74,6 +74,7 @@ De plus, ce pays dispose de la [[arme nucléaire|dissuasion nucléaire]].
 Début avril 2005 et sur proposition du [[Premiers ministres du Royaume-Uni|Premier ministre]], la reine a décidé de dissoudre la [[Chambre des Communes]] et de provoquer des élections anticipées pour le [[5 mai]] [[2005]]. Le ''New Labour'' a remporté ces élections et Tony Blair obtient son troisième mandat consécutif au poste de premier ministre.
 
 <br clear="all"/>
+
 == Subdivisions ==
 ''Article détaillé : [[Biteni ya {{{1}}}]]''
 
