--- a/Ingɛlɛ́tɛlɛ.mw
+++ b/Ingɛlɛ́tɛlɛ.mw
@@ -76,7 +76,7 @@ Début avril 2005 et sur proposition du [[Premiers ministres du Royaume-Uni|Prem
 <br clear="all"/>
 
 == Subdivisions ==
-''Article détaillé : [[Biteni ya {{{1}}}]]''
+''Article détaillé : [[Biteni ya Ingɛlɛ́tɛlɛ]]''
 
 {{UK}}
 
