*Empty MediaWiki Message*

--- a/Joseph_Kabila.mw
+++ b/Joseph_Kabila.mw
@@ -2,11 +2,11 @@
 {{ndambo}}
 [[Image:Joseph_kabila2.jpg|270px|thumb|Joseph Kabila]]
 
-'''Joseph Kabila Kabange''' (born [[1971]]) became president of the [[Democratic Republic of the Congo]] after the assassination of his father [[Laurent-Désiré Kabila]] in January [[2001]].  He has attempted to end the civil war and remove foreign troops from the country, with some success. Following a peace agreement, an interim administration was set up in [[2003]], including the leaders of the country's two main rebel groups as vice-presidents (two other vice-presidents are representatives of the civilian opposition and government supporters respectively). Proposals have been made to hold elections before the end of [[2005]].
+'''Joseph Kabila Kabange''' (abótámi [[1971]]) akomaki mokambi-ekolo [[Kɔ́ngɔ-Kinshasa]] nàkolanda tata wa ye, [[Laurent-Désiré Kabila]], mokambi-ekolo oyo akutaki liwa na loboko wa garde-du-corps waye, na Janvier [[2001]].  Na kimokonzi na ye, azali komeka kosilisa bitumba, mpe kobimisa mapinzo ya bisé mosusu olibanda ekolo Kɔ́ngɔ-Kinshasa. Nàkolanda siniatire ya mokanda ya kimia, bulamatari ya sika, pona eyángeli ekolo pona mbula mibale, ekelamaki na [[2003]], mpe okati wango bakotaki bakambi ya mapinzo mibale ya makasi koleka, oyo basilikelaki bulamatari, to mpe barebɛl; bango bakotaki na kimokonzi lokola bakambi-babale, elongo na moto moko pona parti ya mokambi-ekolo, mpe moto mosusu pona bato oyo bakeseni na politiki ya parti oyo ezali na kimokonzi, kasi baselalaka minduki te (mingi-mingi babengami [[opozision]]). Mokanda ya mibeko-mokonzi to mpe konstitision elobi ete maponeli likosalema liboso ya 30 Yuni ya 2006.
 
 On [[March 28]], [[2004]], a coup attempt or mutiny around the capital [[Kinshasa]], allegedly organized by supporters of the late president [[Mobutu Sese Seko]], failed. On [[June 11]], 2004, coup plotters led by Major [[Eric Lenge]] attempted to take power, declaring that the country's peace process was not working, but were defeated by loyalist troops.
 
-Kabila fought in his father's rebel army, during the campaign that brought him to power. He recieved military training from the neighbouring governments of [[Uganda]] and [[Rwanda]]. He has served in numerous posts prior to becoming Prseident, Major General and Chief of Staff within the Army, heading up the government forces fight against former rebels. However he was considered young and inexperienced to when he became President, following the murder of his father, [[Laurent Kabila]].  
+Kabila abundaki na mapinzo ya barebɛl ya tata wa ye, nà bitumba oyo ememaki wa ye tata o kimokonzi. Alandaki kelasi ya mapinzo okati ya mapinzo ya [[Uganda]] mpe ya [[Rwanda]]. Asalaki na misala mingi okati o bulamatari liboso ya kozala mokambi-ekolo, lokola oyo ya General-Major mpe Mokambi-lisanga ya Mapinzo ya mabele ya ekolo Kɔ́ngɔ-Kinshasa, esika oyo a kambaki basoda o ekolo Kɔ́ngɔ-Kinshasa na bitumba ná barebɛl, obanda 1998. Kasi bato mingi bakanisaki ete ye azalaki na manso makokí te pona mosala ya mokambi-ekolo, na ntango alandaki tata wa ye [[Laurent Kabila]] na kimokonzi.  
 
 ==Mankásá olibanda Wikipedia==
 
