/* Ba Provinsi bya Kɔ́ngɔ Kinshasa */

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -141,7 +141,7 @@ Biteni mikonzi bya Kɔ́ngɔ Kinshasa mibengami [[Provinsi]]. Ba provinsi ya Kɔ
 
 # [[Bandundu]]
 # [[Bas-Congo]]
-# [[Équateur (province)|Équateur]]
+# [[Ekwatéli (provinsi)|Ekwatéli]]
 # [[Kasaï-Occidental]]
 # [[Kasaï-Oriental]]
 # [[Katanga]]
