--- a/Islamu.mw
+++ b/Islamu.mw
@@ -1,2 +1,4 @@
 {{IslamS}}
 '''Islamu''' (na [[kiarabi]] balobi ''Islam''), to mpe '''[[Kimosulmani]]''', ezali moko okati ya barelijion misatu ya [[balandi nzambe moko]]. Lokola okati ya barelijion basusu babale - [[Kimocristo]] na [[Kimoyuda]], [[mosulmani|bamosulmani]] (to mpe balandi Islamu) ba sambelaka nzambe oyo bato-mayele babengi "nzambe ya Abalamu" (''Ibrahim'' na kiarabi).
+
+[[en:Islam]][[pt:Islam]][[fr:Islam]][[sw:Uislamu]][[ar:Islam]][[es:Islam]]
