*Empty MediaWiki Message*

--- a/Boyúda.mw
+++ b/Boyúda.mw
@@ -1,4 +1,4 @@
 {{Kimoyuda}}
 
-Kimoyuda (na lifalansé balobi ''Judaisme'', na liebeleo (hebreux) balobi
+'''Kimoyuda''' (na lifalansé balobi ''Judaisme'', na liebeleo (hebreux) balobi
 [en:judaism]][[fr:judaisme]]
