*Empty MediaWiki Message*

--- a/Molɔngɔ́_ya_bisé_ya_mokili.mw
+++ b/Molɔngɔ́_ya_bisé_ya_mokili.mw
@@ -1,4 +1,5 @@
 {{Ndámbo}}
+[[category:Bisé]]
 
 === A ===
 [[Aljeria]] - [[Alémani]] - [[Al Mamlaká al-Maghribiya]] (Maroc) - [[Libîya]] - [[Angóla]]
